--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.10.3",
     "nodemon": "^2.0.4"
+  },
+  "devDependencies": {
+    "eslint": "^7.8.1"
   }
 }
