--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.3",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "validator": "^13.1.1"
   },
   "devDependencies": {
     "eslint": "^7.8.1"
