--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "esentis",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.3",
